--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
 #
 # This file contains configuration flags to customize the site.
 # Varables can be set by default with this configure file.
+
+name: "KRL"
+description: "KRL devtools"
+
+url: "http://localhost:4000"
+
+paginate: 10
+
+markdown: rdiscount
+permalink: pretty
+# pygments: true
